--- a/notebooks/chat_example.ipynb
+++ b/notebooks/chat_example.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"sk-svcacct-EmXKnqAmQcADizLE4P_Yvjhzn17OwJ7qoU2JJ7IiZU8R1j3T3BlbkFJ9gPjtbYVqmd-LquNX5uPx7wXaeKEBXVs3TIJTFYEk2OJWAA\""
+    "api_key = os.environ.get(\"OPENAI_API_KEY\")"
    ]
   },
   {
