--- a/notebooks/chat_example.ipynb
+++ b/notebooks/chat_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,42 +13,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"sk-svcacct-ZjcXAulw5Fsn3P1yztNqTHwHUui5ZlngvquOh_YS2AalnAnT3BlbkFJmDup-WUGGy8f7071TCBMHxIVdRHIT1b8J_TWGtPfqClyLAA\""
+    "api_key = \"sk-svcacct-GWQuvrcDm_vCk3uaf9Ap3QVT0DUwqhQlQh9mm2Qx5Ir1od7T3BlbkFJd6kh1nUuUsqyNpfUe0iqOImR0lCSqnZUG2CcqRyuqer0iAA\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rah/miniconda3/envs/swarm/lib/python3.11/site-packages/pydantic/_internal/_fields.py:201: UserWarning: Field name \"type\" in \"Tool\" shadows an attribute in parent \"DomainObject\"\n",
+      "  warnings.warn(\n",
+      "/Users/rah/miniconda3/envs/swarm/lib/python3.11/site-packages/pydantic/_internal/_fields.py:161: UserWarning: Field \"model_name\" has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The question of the meaning of life is one of the most profound and enduring inquiries in human history. It has been approached from various angles—philosophical, religious, scientific, and existential. Here are a few perspectives:\n",
+      "The question of the meaning of life is one that has been pondered by philosophers, theologians, and thinkers for millennia, and it remains one of the most profound and enigmatic inquiries of human existence. Here are several perspectives that have emerged over time:\n",
       "\n",
-      "1. **Philosophical Perspectives**:\n",
-      "   - **Existentialism**: Existentialist thinkers like Jean-Paul Sartre and Albert Camus argue that life inherently has no meaning, and it is up to each individual to create their own meaning through their choices and actions.\n",
-      "   - **Absurdism**: Camus, in particular, discusses the \"absurd\"—the conflict between humans' desire to find meaning and the silent, indifferent universe. He suggests that we must accept this absurdity and continue to live passionately.\n",
-      "   - **Nihilism**: This perspective, often associated with Friedrich Nietzsche, posits that life lacks inherent meaning, purpose, or value. However, Nietzsche also speaks of the possibility of creating one's own values through the concept of the Übermensch (Overman).\n",
+      "1. **Existentialism**: Existentialist philosophers like Jean-Paul Sartre and Albert Camus argue that life inherently has no meaning, and it is up to each individual to create their own purpose through their choices and actions. This perspective emphasizes personal freedom, responsibility, and the subjective nature of meaning.\n",
       "\n",
-      "2. **Religious Perspectives**:\n",
-      "   - **Christianity**: Many Christians believe that the meaning of life is to know, love, and serve God. Life is seen as a test or a journey towards eternal salvation.\n",
-      "   - **Buddhism**: In Buddhism, the meaning of life is often related to the cessation of suffering (dukkha) through the Eightfold Path, leading to enlightenment (nirvana).\n",
-      "   - **Hinduism**: Hindu beliefs suggest that life’s purpose is to achieve dharma (duty/ethics), artha (prosperity/work), kama (desires/passions), and moksha (liberation from the cycle of rebirth).\n",
+      "2. **Religious and Spiritual Views**: Many religious traditions offer frameworks for understanding the meaning of life. For instance, in Christianity, life’s purpose is often seen as knowing, loving, and serving God. In Buddhism, the purpose is to attain enlightenment and escape the cycle of suffering and rebirth. Hinduism speaks of Dharma (duty/righteousness), Artha (prosperity), Kama (pleasure), and Moksha (liberation) as the four aims of life.\n",
       "\n",
-      "3. **Scientific Perspectives**:\n",
-      "   - **Evolutionary Biology**: From a biological standpoint, the purpose of life can be seen as the propagation of genes and the survival of species. Richard Dawkins, in \"The Selfish Gene,\" argues that our behaviors and purposes can be understood in terms of gene survival.\n",
-      "   - **Cosmology**: The scientific view of life often doesn't address meaning in a philosophical sense but seeks to understand the mechanisms and origins of life in the universe.\n",
+      "3. **Humanism**: From a humanistic perspective, the meaning of life can be found in the pursuit of knowledge, the betterment of society, and the realization of human potential. Humanists often focus on the importance of human values, ethical living, and the interconnectedness of all people.\n",
       "\n",
-      "4. **Personal and Subjective Perspectives**:\n",
-      "   - Many people find meaning through personal experiences, relationships, creativity, and self-fulfillment. Viktor Frankl, in his book \"Man's Search for Meaning,\" emphasizes that meaning can be found in every moment of living, even in suffering.\n",
+      "4. **Nihilism**: Nihilism posits that life is without objective meaning, purpose, or intrinsic value. This can lead to a sense of despair, but some interpret it as a call to create one's own meaning in an indifferent universe.\n",
       "\n",
-      "Ultimately, the meaning of life may not be a one-size-fits-all answer but a deeply personal journey. It may involve a synthesis of these perspectives or a unique path that resonates with one's experiences, beliefs, and values."
+      "5. **Scientific Perspectives**: Some look to science for answers, suggesting that the meaning of life is to perpetuate our genes and ensure the survival of our species. This biological perspective focuses on evolution, reproduction, and the continuation of life as a fundamental purpose.\n",
+      "\n",
+      "6. **Psychological Views**: Psychologist Viktor Frankl, in his work \"Man's Search for Meaning,\" argues that the primary drive in human beings is to find meaning in life. He suggests that meaning can be found through work, relationships, and even suffering, by finding a purpose in the midst of it.\n",
+      "\n",
+      "Ultimately, the meaning of life may be a deeply personal question, with each individual finding their own answers based on their experiences, beliefs, and reflections. It is a journey that invites continuous exploration and redefinition."
      ]
     }
    ],
@@ -140,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
