fixes to make notebook work again and added chatbot frontend component to ui

--- a/notebooks/chat_example.ipynb
+++ b/notebooks/chat_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dotenv\n",
+    "dotenv.load_dotenv()\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"sk-svcacct-GWQuvrcDm_vCk3uaf9Ap3QVT0DUwqhQlQh9mm2Qx5Ir1od7T3BlbkFJd6kh1nUuUsqyNpfUe0iqOImR0lCSqnZUG2CcqRyuqer0iAA\""
+    "from IPython.display import display, Markdown\n"
    ]
   },
   {
@@ -41,22 +52,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The question of the meaning of life is one that has been pondered by philosophers, theologians, and thinkers for millennia, and it remains one of the most profound and enigmatic inquiries of human existence. Here are several perspectives that have emerged over time:\n",
+      "The question of the meaning of life is one that has been pondered by philosophers, theologians, scientists, and thinkers throughout human history. There is no single, definitive answer, as the meaning of life can be interpreted in many different ways depending on one's perspective, beliefs, and experiences. Here are a few philosophical viewpoints to consider:\n",
       "\n",
-      "1. **Existentialism**: Existentialist philosophers like Jean-Paul Sartre and Albert Camus argue that life inherently has no meaning, and it is up to each individual to create their own purpose through their choices and actions. This perspective emphasizes personal freedom, responsibility, and the subjective nature of meaning.\n",
+      "1. **Existentialism**: Existentialists, such as Jean-Paul Sartre and Albert Camus, argue that life inherently has no meaning, and it is up to each individual to create their own meaning through their choices and actions. This perspective emphasizes personal responsibility and the freedom to define one's own purpose.\n",
       "\n",
-      "2. **Religious and Spiritual Views**: Many religious traditions offer frameworks for understanding the meaning of life. For instance, in Christianity, life’s purpose is often seen as knowing, loving, and serving God. In Buddhism, the purpose is to attain enlightenment and escape the cycle of suffering and rebirth. Hinduism speaks of Dharma (duty/righteousness), Artha (prosperity), Kama (pleasure), and Moksha (liberation) as the four aims of life.\n",
+      "2. **Nihilism**: Nihilism takes a more pessimistic view, suggesting that life is meaningless and that there is no inherent value or purpose in existence. Friedrich Nietzsche explored this idea, though he also proposed the concept of the \"Übermensch\" (Overman), who creates their own values in the face of a meaningless world.\n",
       "\n",
-      "3. **Humanism**: From a humanistic perspective, the meaning of life can be found in the pursuit of knowledge, the betterment of society, and the realization of human potential. Humanists often focus on the importance of human values, ethical living, and the interconnectedness of all people.\n",
+      "3. **Theism**: Many religious traditions propose that the meaning of life is given by a higher power or divine being. For example, in Christianity, the purpose of life is often seen as serving and glorifying God, living a life in accordance with His will, and preparing for an eternal existence in the afterlife.\n",
       "\n",
-      "4. **Nihilism**: Nihilism posits that life is without objective meaning, purpose, or intrinsic value. This can lead to a sense of despair, but some interpret it as a call to create one's own meaning in an indifferent universe.\n",
+      "4. **Humanism**: Humanists believe that meaning is derived from human experiences and relationships. They emphasize the importance of human values, creativity, and the pursuit of knowledge and happiness. The focus is on improving the human condition and finding fulfillment through personal and collective achievements.\n",
       "\n",
-      "5. **Scientific Perspectives**: Some look to science for answers, suggesting that the meaning of life is to perpetuate our genes and ensure the survival of our species. This biological perspective focuses on evolution, reproduction, and the continuation of life as a fundamental purpose.\n",
+      "5. **Buddhism**: In Buddhism, the meaning of life is connected to the pursuit of enlightenment and the alleviation of suffering. This involves following the Noble Eightfold Path, understanding the nature of reality, and achieving a state of Nirvana, where one is free from the cycle of birth, death, and rebirth.\n",
       "\n",
-      "6. **Psychological Views**: Psychologist Viktor Frankl, in his work \"Man's Search for Meaning,\" argues that the primary drive in human beings is to find meaning in life. He suggests that meaning can be found through work, relationships, and even suffering, by finding a purpose in the midst of it.\n",
+      "6. **Utilitarianism**: From a utilitarian perspective, the meaning of life might be to maximize happiness and reduce suffering for the greatest number of people. This ethical framework, associated with philosophers like Jeremy Bentham and John Stuart Mill, focuses on the consequences of actions and their impact on overall well-being.\n",
       "\n",
-      "Ultimately, the meaning of life may be a deeply personal question, with each individual finding their own answers based on their experiences, beliefs, and reflections. It is a journey that invites continuous exploration and redefinition."
+      "Ultimately, the meaning of life is a deeply personal and subjective question. It may be influenced by one's cultural background, personal experiences, and philosophical inclinations. Many find that their understanding of life's meaning evolves over time as they grow and encounter new experiences. In seeking an answer, one might find value in exploring various perspectives and reflecting on what resonates most deeply with their own sense of purpose and existence."
      ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "The question of the meaning of life is one that has been pondered by philosophers, theologians, scientists, and thinkers throughout human history. There is no single, definitive answer, as the meaning of life can be interpreted in many different ways depending on one's perspective, beliefs, and experiences. Here are a few philosophical viewpoints to consider:\n",
+       "\n",
+       "1. **Existentialism**: Existentialists, such as Jean-Paul Sartre and Albert Camus, argue that life inherently has no meaning, and it is up to each individual to create their own meaning through their choices and actions. This perspective emphasizes personal responsibility and the freedom to define one's own purpose.\n",
+       "\n",
+       "2. **Nihilism**: Nihilism takes a more pessimistic view, suggesting that life is meaningless and that there is no inherent value or purpose in existence. Friedrich Nietzsche explored this idea, though he also proposed the concept of the \"Übermensch\" (Overman), who creates their own values in the face of a meaningless world.\n",
+       "\n",
+       "3. **Theism**: Many religious traditions propose that the meaning of life is given by a higher power or divine being. For example, in Christianity, the purpose of life is often seen as serving and glorifying God, living a life in accordance with His will, and preparing for an eternal existence in the afterlife.\n",
+       "\n",
+       "4. **Humanism**: Humanists believe that meaning is derived from human experiences and relationships. They emphasize the importance of human values, creativity, and the pursuit of knowledge and happiness. The focus is on improving the human condition and finding fulfillment through personal and collective achievements.\n",
+       "\n",
+       "5. **Buddhism**: In Buddhism, the meaning of life is connected to the pursuit of enlightenment and the alleviation of suffering. This involves following the Noble Eightfold Path, understanding the nature of reality, and achieving a state of Nirvana, where one is free from the cycle of birth, death, and rebirth.\n",
+       "\n",
+       "6. **Utilitarianism**: From a utilitarian perspective, the meaning of life might be to maximize happiness and reduce suffering for the greatest number of people. This ethical framework, associated with philosophers like Jeremy Bentham and John Stuart Mill, focuses on the consequences of actions and their impact on overall well-being.\n",
+       "\n",
+       "Ultimately, the meaning of life is a deeply personal and subjective question. It may be influenced by one's cultural background, personal experiences, and philosophical inclinations. Many find that their understanding of life's meaning evolves over time as they grow and encounter new experiences. In seeking an answer, one might find value in exploring various perspectives and reflecting on what resonates most deeply with their own sense of purpose and existence."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -113,12 +150,17 @@
     "    ),\n",
     "])\n",
     "\n",
+    "markdown_response = \"\"\n",
     "async for chunk in response:\n",
-    "    for choice in chunk.choices:\n",
-    "        delta = choice.delta\n",
-    "        content = getattr(delta, 'content', '')\n",
-    "        if content:\n",
-    "            print(content, end='')\n",
+    "    if chunk.choices[0].delta.content is not None:\n",
+    "        content = chunk.choices[0].delta.content\n",
+    "        sys.stdout.write(content)\n",
+    "        sys.stdout.flush()\n",
+    "        markdown_response += content\n",
+    "\n",
+    "display(Markdown(markdown_response))\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
