--- a/notebooks/email_example.ipynb
+++ b/notebooks/email_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7534db98",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "236fa257",
    "metadata": {},
    "outputs": [
@@ -39,22 +39,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-04 03:22:38,735\tINFO worker.py:1783 -- Started a local Ray instance.\n"
+      "2024-09-04 14:36:02,563\tINFO worker.py:1783 -- Started a local Ray instance.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 09-04 03:22:49 llm_engine.py:184] Initializing an LLM engine (v0.5.5) with config: model='NousResearch/Hermes-3-Llama-3.1-8B', speculative_config=None, tokenizer='NousResearch/Hermes-3-Llama-3.1-8B', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, rope_scaling=None, rope_theta=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=20000, download_dir=None, load_format=LoadFormat.AUTO, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=None, enforce_eager=False, kv_cache_dtype=auto, quantization_param_path=None, device_config=cuda, decoding_config=DecodingConfig(guided_decoding_backend='outlines'), observability_config=ObservabilityConfig(otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=NousResearch/Hermes-3-Llama-3.1-8B, use_v2_block_manager=False, enable_prefix_caching=False)\n",
-      "INFO 09-04 03:22:51 model_runner.py:879] Starting to load model NousResearch/Hermes-3-Llama-3.1-8B...\n",
-      "INFO 09-04 03:22:51 weight_utils.py:236] Using model weights format ['*.safetensors']\n"
+      "INFO 09-04 14:36:11 llm_engine.py:184] Initializing an LLM engine (v0.5.5) with config: model='NousResearch/Meta-Llama-3.1-8B-Instruct', speculative_config=None, tokenizer='NousResearch/Meta-Llama-3.1-8B-Instruct', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, rope_scaling=None, rope_theta=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=20000, download_dir=None, load_format=LoadFormat.AUTO, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=None, enforce_eager=False, kv_cache_dtype=auto, quantization_param_path=None, device_config=cuda, decoding_config=DecodingConfig(guided_decoding_backend='outlines'), observability_config=ObservabilityConfig(otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=NousResearch/Meta-Llama-3.1-8B-Instruct, use_v2_block_manager=False, enable_prefix_caching=False)\n",
+      "INFO 09-04 14:36:13 model_runner.py:879] Starting to load model NousResearch/Meta-Llama-3.1-8B-Instruct...\n",
+      "INFO 09-04 14:36:13 weight_utils.py:236] Using model weights format ['*.safetensors']\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecad5625f74748618e8d7fc3f2eb6774",
+       "model_id": "70db164437784a2b877cf35968c397ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,11 +69,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 09-04 03:23:07 model_runner.py:890] Loading model weights took 14.9888 GB\n",
-      "INFO 09-04 03:23:13 gpu_executor.py:121] # GPU blocks: 1253, # CPU blocks: 2048\n",
-      "INFO 09-04 03:23:17 model_runner.py:1181] Capturing the model for CUDA graphs. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI.\n",
-      "INFO 09-04 03:23:17 model_runner.py:1185] CUDA graphs can take additional 1~3 GiB memory per GPU. If you are running out of memory, consider decreasing `gpu_memory_utilization` or enforcing eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n",
-      "INFO 09-04 03:23:53 model_runner.py:1300] Graph capturing finished in 36 secs.\n"
+      "INFO 09-04 14:36:28 model_runner.py:890] Loading model weights took 14.9888 GB\n",
+      "INFO 09-04 14:36:34 gpu_executor.py:121] # GPU blocks: 1253, # CPU blocks: 2048\n",
+      "INFO 09-04 14:36:37 model_runner.py:1181] Capturing the model for CUDA graphs. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI.\n",
+      "INFO 09-04 14:36:37 model_runner.py:1185] CUDA graphs can take additional 1~3 GiB memory per GPU. If you are running out of memory, consider decreasing `gpu_memory_utilization` or enforcing eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n",
+      "INFO 09-04 14:37:01 model_runner.py:1300] Graph capturing finished in 24 secs.\n"
      ]
     }
    ],
@@ -97,17 +97,16 @@
     "\n",
     "from outlines import models, generate\n",
     "from outlines.models import VLLM\n",
-    "from outlines.generate.api import GenerationParameters, SamplingParameters\n",
     "from outlines.processors.structured import JSONLogitsProcessor\n",
     "from transformers import AutoTokenizer\n",
     "\n",
-    "vllm: VLLM = models.vllm(model_name=\"NousResearch/Hermes-3-Llama-3.1-8B\", max_model_len=20000)\n",
+    "vllm: VLLM = models.vllm(model_name=\"NousResearch/Meta-Llama-3.1-8B-Instruct\", max_model_len=20000)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2af4f743",
    "metadata": {},
    "outputs": [],
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8773618b",
    "metadata": {},
    "outputs": [],
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d792207d-f0cc-43d5-a3e5-01b26629e638",
    "metadata": {},
    "outputs": [],
@@ -169,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "40518308-837a-42ce-9f13-52b59fa6b054",
    "metadata": {},
    "outputs": [],
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "26c87b5f-e94d-40df-89ae-63fac93524a2",
    "metadata": {},
    "outputs": [],
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "98914b53-4eb5-4f67-9d48-92405139c281",
    "metadata": {},
    "outputs": [
@@ -387,7 +386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed prompts: 100%|██████████| 1/1 [00:00<00:00,  8.56it/s, est. speed input: 2600.68 toks/s, output: 8.69 toks/s]\n"
+      "Processed prompts: 100%|██████████| 1/1 [00:04<00:00,  4.61s/it, est. speed input: 64.82 toks/s, output: 15.82 toks/s]\n"
      ]
     },
     {
@@ -395,7 +394,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "Failed to parse JSON for email: Meeting\n",
+      "    \"sender\" : \"alice@example.com\"\n",
+      "    , \"subject\" : \"Meeting\"\n",
+      "    , \"content\" : \"Let\"\n",
+      "    , \"namespace\" : \"personal\"\n",
+      "    , \"meta\" : \"location:office\"\n",
+      "    , \"vector\" : [ 0.1, 0.2, 0.3 ]\n",
+      "}\n",
       "Table schema before upsert: id: string\n",
       "sender: string\n",
       "subject: string\n",
@@ -404,7 +409,7 @@
       "meta: string\n",
       "vector: list<item: float>\n",
       "  child 0, item: float\n",
-      "Data to be inserted: {'id': '2b258a3c-9cdb-5f7a-aa94-f40036c08e45', 'sender': 'alice@example.com', 'subject': 'Meeting', 'content': \"Let's meet at 10 AM.\", 'namespace': 'unknown', 'meta': '{}', 'vector': [0.1, 0.2, 0.3]}\n",
+      "Data to be inserted: {'id': '7420e06a-0a00-5fb6-9b90-cae4e16b16aa', 'sender': 'alice@example.com', 'subject': 'Meeting', 'content': \"Let's meet at 10 AM.\", 'namespace': 'personal', 'meta': '{}', 'vector': [0.1, 0.2, 0.3]}\n",
       "PyArrow table schema: id: string\n",
       "sender: string\n",
       "subject: string\n",
@@ -419,14 +424,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed prompts: 100%|██████████| 1/1 [00:03<00:00,  3.56s/it, est. speed input: 83.71 toks/s, output: 16.01 toks/s]\n"
+      "Processed prompts: 100%|██████████| 1/1 [00:05<00:00,  5.24s/it, est. speed input: 56.92 toks/s, output: 15.85 toks/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"sender\": \"bob@example.org\", \"subject\": \"Project Update\", \"content\": \"The project is on track.\", \"namespace\": \"work\", \"meta\": \"status:on track\", \"vector\": [0.4, 0.5, 0.6]}\n",
+      "{\n",
+      "    \"sender\" : \"bob@example.org\"\n",
+      "  ,\n",
+      "  \"subject\" : \"Project Update\"\n",
+      "  ,\n",
+      "  \"content\" : \"The project is on track.\"\n",
+      "  ,\n",
+      "  \"namespace\" : \"work\"\n",
+      "  ,\n",
+      "  \"meta\" : \"status:on track\"\n",
+      "  ,\n",
+      "  \"vector\" : [ 0.4, 0.5, 0.6 ]\n",
+      "}\n",
       "Table schema before upsert: id: string\n",
       "sender: string\n",
       "subject: string\n",
@@ -450,15 +467,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed prompts: 100%|██████████| 1/1 [00:04<00:00,  4.98s/it, est. speed input: 59.87 toks/s, output: 16.07 toks/s]\n"
+      "Processed prompts: 100%|██████████| 1/1 [00:04<00:00,  4.37s/it, est. speed input: 68.15 toks/s, output: 15.78 toks/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"sender\": \"carol@example.net\", \"subject\": \"Invoice\", \"content\": \"Please find the invoice attached.\", \"namespace\": \"work\", \"meta\": \"status:pending\", \"vector\": [0.7, 0.8, 0.9]}<|end_of_text|>(\"%'<.not the keys=*/missing%)' contains none of the given keys: missing </HEAD>\n",
-      "Failed to parse JSON for email: Invoice\n",
+      "{\n",
+      "    \"sender\" : \"carol@example.net\" ,\n",
+      "    \"subject\" : \"Invoice\" ,\n",
+      "    \"content\" : \"Please find the invoice attached.\" ,\n",
+      "    \"namespace\" : \"work\" ,\n",
+      "    \"meta\" : \"status:pending\" ,\n",
+      "    \"vector\" : [ 0.7 ]  \n",
+      "}\n",
       "Table schema before upsert: id: string\n",
       "sender: string\n",
       "subject: string\n",
@@ -467,7 +490,7 @@
       "meta: string\n",
       "vector: list<item: float>\n",
       "  child 0, item: float\n",
-      "Data to be inserted: {'id': '453cd46f-9a07-5643-97e0-e503b0daa0a0', 'sender': 'carol@example.net', 'subject': 'Invoice', 'content': 'Please find the invoice attached.', 'namespace': 'unknown', 'meta': '{}', 'vector': [0.7, 0.8, 0.9]}\n",
+      "Data to be inserted: {'id': '6e9f3d77-decd-51fd-a3c7-6cb86ecaaffa', 'sender': 'carol@example.net', 'subject': 'Invoice', 'content': 'Please find the invoice attached.', 'namespace': 'work', 'meta': '{}', 'vector': [0.7, 0.8, 0.9]}\n",
       "PyArrow table schema: id: string\n",
       "sender: string\n",
       "subject: string\n",
@@ -480,9 +503,16 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "134de97cde2d439a92233835463f8223",
+       "model_id": "a297103690db4cf3a8f03ebf82102780",
        "version_major": 2,
        "version_minor": 0
       },
@@ -496,7 +526,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1603537726344a2896d881b9d2ba743",
+       "model_id": "7ca5c8d586d14189a5d4fafe4bced331",
        "version_major": 2,
        "version_minor": 0
       },
@@ -518,13 +548,17 @@
       "2  carol@example.net         Invoice  Please find the invoice attached.   \n",
       "\n",
       "  namespace meta           vector       domain  word_count  \n",
-      "0   unknown   {}  [0.1, 0.2, 0.3]  example.com           5  \n",
+      "0  personal   {}  [0.1, 0.2, 0.3]  example.com           5  \n",
       "1      work   {}  [0.4, 0.5, 0.6]  example.org           5  \n",
-      "2   unknown   {}  [0.7, 0.8, 0.9]  example.net           5  \n"
+      "2      work   {}  [0.7, 0.8, 0.9]  example.net           5  \n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "import outlines\n",
+    "import outlines.generate\n",
+    "from outlines.generate.api import GenerationParameters, SamplingParameters\n",
     "\n",
     "# Example email data\n",
     "input_data = EmailListModel(emails=[\n",
@@ -537,8 +571,11 @@
     "driver = PydanticPyArrowDaftRayLanceDBDriver(lancedb_path=\"./lancedb_dir\")\n",
     "\n",
     "# tokenizer = AutoTokenizer.from_pretrained(\"microsoft/Phi-3.5-mini-instruct\")\n",
-    "generation_parameters = GenerationParameters(max_tokens=4096, seed=42, stop_at=\"\\n\")\n",
-    "# logits_processor = JSONLogitsProcessor(schema=EmailModel.model_json_schema(), tokenizer=tokenizer, whitespace_pattern=\"\\s+\")\n",
+    "generation_parameters = GenerationParameters(max_tokens=4096, seed=42, stop_at=\"<|endoftext|>\")\n",
+    "logits_processor = JSONLogitsProcessor(\n",
+    "    schema=EmailModel.model_json_schema(),\n",
+    "    tokenizer=vllm.tokenizer,\n",
+    "    whitespace_pattern=\"\\s+\")\n",
     "sampling_parameters = SamplingParameters(temperature=1.0, sampler=\"nucleus\")\n",
     "\n",
     "\n",
@@ -546,8 +583,8 @@
     "for email in input_data.emails:\n",
     "    prompt = f\"\"\"Summarize this Email: {email} using the following JSON schema: {EmailModel.model_json_schema()}  Only respond with the JSON object.\\n\\n\"\"\"\n",
     "    \n",
-    "    \n",
-    "    response = vllm.generate(prompts=[prompt], generation_parameters=generation_parameters, logits_processor=None, sampling_parameters=sampling_parameters)\n",
+    "    # response = outlines.models.vllm.generate(prompt, EmailModel)\n",
+    "    response = vllm.generate(prompts=prompt, generation_parameters=generation_parameters, logits_processor=logits_processor, sampling_parameters=sampling_parameters)\n",
     "    print(response)\n",
     "    try:\n",
     "        result = json.loads(response.lstrip().rstrip())\n",
